# F5-TTSx

./: README.md  pyproject.toml
src/f5_tts/: api.py  socket_client.py  socket_server.py
src/f5_tts/eval/: eval_infer_batch.py  utils_eval.py
src/f5_tts/infer/: README.md  infer_gradio.py  utils_infer.py
src/f5_tts/infer/.cache/: last_used_asr_model.txt  last_used_custom_model_info_v1.txt
src/f5_tts/model/: dataset.py
src/f5_tts/runtime/triton_trtllm/: benchmark.py  client_grpc.py  client_http.py
src/f5_tts/runtime/triton_trtllm/model_repo_f5_tts/f5_tts/1/: f5_tts_trtllm.py
src/f5_tts/train/: finetune_gradio.py
src/f5_tts/train/datasets/: prepare_wenetspeech4tts.py
