[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "f5-tts"
version = "1.1.19.1"
description = "F5-TTSx: A Fairytaler that Fakes Fluent and Faithful Speech with Flow Matching"
readme = "README.md"
license = {text = "MIT License"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "accelerate>=0.33.0",
    "bitsandbytes>0.37.0; platform_machine!='arm64' and platform_system!='Darwin'",
    "cached_path==1.8.9",
    "click==8.3.1",
    "datasets==4.5.0",
    "ema_pytorch>=0.5.2",
    "gradio>=6.0.0",
    "hydra-core>=1.3.0",
    "librosa==0.11.0",
    "matplotlib==3.10.8",
    "numpy<=1.26.4; python_version<='3.10'",
    "pydantic<=2.10.6",
    "pydub==0.25.1",
    "pypinyin==0.55.0",
    "rjieba==0.2.0",
    "safetensors==0.7.0",
    "soundfile==0.31.1",
    "tomli==2.4.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchcodec==0.10.0",
    "torchdiffeq==0.2.5",
    "tqdm>=4.65.0",
    "transformers==4.49.0",
    "transformers_stream_generator==0.0.5",
    "unidecode==1.4.0",
    "vocos==0.1.0",
    "wandb==0.25.0",
    "x_transformers>=1.31.14",
    "openai-whisper==20250625",
    "ruaccent",
    "requests==2.32.5",
    "chardet==5.2.0",    
    "urllib3==2.6.3",
]

[project.urls]
Homepage = "https://github.com/LeeAeron/F5-TTSx"

[project.scripts]
"f5-tts_infer-gradio" = "f5_tts.infer.infer_gradio:main"
